--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,12 +46,11 @@ jobs:
         with:
           name: cronos
           extraPullNames: dapp
-          # github don't pass secrets for pull request from fork repos,
-          # in that case the push is disabled naturally.
+
           signingKey: "${{ secrets.CACHIX_SIGNING_KEY }}"
           authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
       - name: 'build and cache upgrade test packages'
-        if: steps.changed-files.outputs.only_changed == 'false' && matrix.tests == 'upgrade'
+        if: steps.changed-files.outputs.only_changed == 'false' && matrix.tests == 'upgrade' && (github.event_name != 'pull_request' || github.event.pull_request.head.repo.fork == false)
         run: cachix watch-exec cronos -- nix-build integration_tests/configs/upgrade-test-package.nix
       - name: Run integration tests
         if: steps.changed-files.outputs.only_changed == 'false'
