feat(testground): refine testground test process in local (#1970)
* update testground dockerfile for building ARM64 image in local

* refine statistic numbers and update dockfile go build version

* lint

* fix comment

* remove the unused mount

* update wording

* change anchor logic

* nit

* update changelop

* fix sed substitution for outdir is fragile and could corrupt JSON

* update comment in the CA certificate part

* update readme for adding note in multi-platform builds section

* sync Dockerfile rocksdb version

* add crt file to gitignore and update comment

* fix nix build testground-image failed

* update Dockerfile for rocksdb dependency

* support validators with different config settings

* lint

* lint

* lint and fix lint tool

* fix testground ci fail

* fix nix command in readme

* Consolidate README

* fix node_overrides logic in stateless

* fix annotation

* update README,benchmark results, and KUBERNETES setup

* lint

* lint

* update testground README

* update README

---------

Co-authored-by: randy-cro <randy.ang@crypto.com>

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,6 @@ integration_tests/configs/*.yaml
 .envrc
 .direnv
 chain-main-*
+
+# Corporate CA certs (environment-specific, not for public repo)
+testground/corp-ca.crt
